Bug 1753682 - fix format specifier for BigInt. r=nchevobbe,smaug,devtools-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D173415